Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp
  namespace: default
spec:
  selector:
    matchLabels:
      app: nodeapp
  replicas: 3
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeapp
        image: "gcr.io/wideops-task-devops/nodeapp1"

---

apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
  namespace: default
  labels:
    app: nodeapp
spec:
  type: ClusterIP
  selector:
    app: nodeapp
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
