Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: managed-cert-ingress
  annotations:
    networking.gke.io/managed-certificates: managed-cert
spec:
  defaultBackend:
    service:
      name: nodeapp2
      port:
        number: 80
  tls:
  - hosts:
    - localhost.com
    secretName: ingress-cert
